--- a/flask-app/templates/home.html
+++ b/flask-app/templates/home.html
@@ -227,7 +227,7 @@
 
 </fieldset>
     
-<p> Cleaning Fees: <input name="dest" type ="number" value="0" /> </p>
+<p> Cleaning Fees: <input name="cleaning_fee" type ="number" value="0" /> </p>
 
 <p> Bed Type :   
 <select name="bed_type">
