--- a/flask-app/templates/home.html
+++ b/flask-app/templates/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>Rate-This-Listing App</title>
-<body>
+<h1>Rate-This-Listing App</h1>
+<body bgcolor="#E6E6FA">
+
 
 <form action = "/userreview" method="POST">
 
