--- a/flask-app/templates/unused_home.html
+++ b/flask-app/templates/unused_home.html
@@ -7,19 +7,21 @@
 
 <p> Property Type :
 <select name="property_type">
-<option name="property_type_apartment" value="property_type_apartment" selected>Apartment </option>
-<option name="property_type_bed_breakfast" value="property_type_bed_breakfast">Bed and Breakfast </option>
-<option name="property_type_condominium" value="property_type_condominium">Condo </option>
-<option name="property_type_dorm" value="property_type_dorm">Dorm </option>
-<option name="property_type_hostel" value="property_type_hostel">Hostel </option>
-<option name="property_type_house" value="property_type_house">House </option>
-<option name="property_type_loft" value="property_type_loft">Loft </option>
-<option name="property_type_townhouse" value="property_type_townhouse">Townhouse </option>
+<option value="0" selected>Select: </option>
+<option name="property_type_apartment" value="1">Apartment </option>
+<option name="property_type_bed_breakfast" value="1">Bed and Breakfast </option>
+<option name="property_type_condominium" value="1">Condo </option>
+<option name="property_type_dorm" value="1">Dorm </option>
+<option name="property_type_hostel" value="1">Hostel </option>
+<option name="property_type_house" value="1">House </option>
+<option name="property_type_loft" value="1">Loft </option>
+<option name="property_type_townhouse" value="1">Townhouse </option>
 </select></p>
 
 <p> Number of Bedrooms :
 <select name="bedrooms">
-<option value="1" selected>1 </option>
+<option value="0" selected>0 </option>
+<option value="1" >1 </option>
 <option value="2">2 </option>
 <option value="3">3 </option>
 <option value="4">4 </option>
@@ -32,7 +34,8 @@
     
 <p> Number of Bathrooms :
 <select name="bathrooms">
-<option value="1" selected>1 </option>
+<option value="0" selected>0 </option>
+<option value="1">1 </option>
 <option value="2">2 </option>
 <option value="3">3 </option>
 <option value="4">4 </option>
@@ -45,7 +48,8 @@
     
 <p> Number of Beds :
 <select name="beds">
-<option value="1" selected>1 </option>
+<option value="0" selected>0 </option>
+<option value="1" >1 </option>
 <option value="2">2 </option>
 <option value="3">3 </option>
 <option value="4">4 </option>
@@ -223,62 +227,66 @@
 
 </fieldset>
     
-<p> Cleaning Fee: <input name="cleaning_fee" type ="number" value="50.00" /> </p>
+<p> Cleaning Fees: <input name="cleaning_fee" type ="number" value="0" /> </p>
 
 <p> Bed Type :   
 <select name="bed_type">
-<option name="bed_type_couch" value="bed_type_couch" selected>Couch </option>
-<option name="bed_type_futon" value="bed_type_futon">Futon </option>
-<option name="bed_type_pull_out_sofa" value="bed_type_pull_out_sofa">Pull Out Sofa </option>
-<option name="bed_type_real_bed" value="bed_type_real_bed">Real Bed </option>
+<option value="0" selected>Select: </option>
+<option name="bed_type_couch" value="1">Couch </option>
+<option name="bed_type_futon" value="1">Futon </option>
+<option name="bed_type_pull_out_sofa" value="1">Pull Out Sofa </option>
+<option name="bed_type_real_bed" value="1">Real Bed </option>
 </select></p>
 
 <p> Room Type :   
-<select name="room_type">
-<option name="room_type_entire_home_apt" value="room_type_entire_home_apt" selected>Entire Home </option>
-<option name="room_type_private_room" value="room_type_private_room">Private Room </option>
-<option name="room_type_shared_room" value="room_type_shared_room">Shared Room </option>
+<select name="roomtype">
+<option value="0" selected>Select: </option>
+<option name="room_type_entire_home_apt" value="1">Entire Home </option>
+<option name="room_type_private_room" value="1">Private Room </option>
+<option name="room_type_shared_room" value="1">Shared Room </option>
 </select></p>
 
 
 <p> Neighbourhood :    
   <select name="neighbourhood">
-    <option name="neighbourhood_cleansed_bayview" value="neighbourhood_cleansed_bayview" selected>Bayview</option>
-    <option name="neighbourhood_cleansed_bernal_heights" value="neighbourhood_cleansed_bernal_heights">Bernal Heights</option>
-    <option name="neighbourhood_cleansed_castro_upper_market" value="neighbourhood_cleansed_castro_upper_market">Castro Upper Market</option>
-    <option name="neighbourhood_cleansed_chinatown" value="neighbourhood_cleansed_chinatown">Chinatown</option>
-    <option name="neighbourhood_cleansed_crocker_amazon" value="neighbourhood_cleansed_crocker_amazon">Crocker Amazon</option>
-    <option name="neighbourhood_cleansed_diamond_heights" value="neighbourhood_cleansed_diamond_heights">Diamond Heights</option>
-    <option name="neighbourhood_cleansed_downtown_civic_center" value="neighbourhood_cleansed_downtown_civic_center">Downtown Civic Centre</option>
-    <option name="neighbourhood_cleansed_excelsior" value="neighbourhood_cleansed_excelsior">Excelsior</option>
-    <option name="neighbourhood_cleansed_financial_district" value="neighbourhood_cleansed_financial_district">Financial District</option>
-    <option name="neighbourhood_cleansed_glen_park" value="neighbourhood_cleansed_glen_park">Glen Park</option>
-    <option name="neighbourhood_cleansed_golden_gate_park" value="neighbourhood_cleansed_golden_gate_park">Golden Gate Park</option>
-    <option name="neighbourhood_cleansed_haight_ashbury" value="neighbourhood_cleansed_haight_ashbury">Haight Ashbury</option>
-    <option name="neighbourhood_cleansed_inner_richmond" value="neighbourhood_cleansed_inner_richmond">Inner Richmond</option>
-    <option name="neighbourhood_cleansed_lakeshore" value="neighbourhood_cleansed_lakeshore">Lakeshore</option>
-    <option name="neighbourhood_cleansed_marina" value="neighbourhood_cleansed_marina">Marina</option>
-    <option name="neighbourhood_cleansed_mission" value="neighbourhood_cleansed_mission">Mission</option>
-    <option name="neighbourhood_cleansed_nob_hill" value="neighbourhood_cleansed_nob_hill">Nob Hill</option>
-    <option name="neighbourhood_cleansed_noe_valley" value="neighbourhood_cleansed_noe_valley">Noe Valley</option>
-    <option name="neighbourhood_cleansed_north_beach" value="neighbourhood_cleansed_north_beach">North Beach</option>
-    <option name="neighbourhood_cleansed_ocean_view" value="neighbourhood_cleansed_ocean_view">Ocean View</option>
-    <option name="neighbourhood_cleansed_outer_mission" value="neighbourhood_cleansed_outer_mission">Outer Mission</option>
-    <option name="neighbourhood_cleansed_outer_richmond" value="neighbourhood_cleansed_outer_richmond">Outer Richmond</option>
-    <option name="neighbourhood_cleansed_outer_sunset" value="neighbourhood_cleansed_outer_sunset">Outer Sunset</option>
-    <option name="neighbourhood_cleansed_pacific_heights" value="neighbourhood_cleansed_pacific_heights">Pacific Heights</option>
-    <option name="neighbourhood_cleansed_potrero_hill" value="neighbourhood_cleansed_potrero_hill">Potrero Hill</option>
-    <option name="neighbourhood_cleansed_russian_hill" value="neighbourhood_cleansed_russian_hill">Russian Hill</option>
-    <option name="neighbourhood_cleansed_seacliff" value="neighbourhood_cleansed_seacliff">Seacliff</option>
-    <option name="neighbourhood_cleansed_south_of_market" value="neighbourhood_cleansed_south_of_market">South of Market</option>
-    <option name="neighbourhood_cleansed_visitacion_valley" value="neighbourhood_cleansed_visitacion_valley">Visitacion Valley</option>
-    <option name="neighbourhood_cleansed_western_addition" value="neighbourhood_cleansed_western_addition">Western Addition</option>
+    <option value="0" selected>Select:</option>
+    <option name="neighbourhood_cleansed_bayview" value="1">Bayview</option>
+    <option name="neighbourhood_cleansed_bernal_heights" value="1">Bernal Heights</option>
+    <option name="neighbourhood_cleansed_castro_upper_market" value="1">Castro Upper Market</option>
+    <option name="neighbourhood_cleansed_chinatown" value="1">Chinatown</option>
+    <option name="neighbourhood_cleansed_crocker_amazon" value="1">Crocker Amazon</option>
+    <option name="neighbourhood_cleansed_diamond_heights" value="1">Diamond Heights</option>
+    <option name="neighbourhood_cleansed_downtown_civic_center" value="1">Downtown Civic Centre</option>
+    <option name="neighbourhood_cleansed_excelsior" value="1">Excelsior</option>
+    <option name="neighbourhood_cleansed_financial_district" value="1">Financial District</option>
+    <option name="neighbourhood_cleansed_glen_park" value="1">Glen Park</option>
+    <option name="neighbourhood_cleansed_golden_gate_park" value="1">Golden Gate Park</option>
+    <option name="neighbourhood_cleansed_haight_ashbury" value="1">Haight Ashbury</option>
+    <option name="neighbourhood_cleansed_inner_richmond" value="1">Inner Richmond</option>
+    <option name="neighbourhood_cleansed_lakeshore" value="1">Lakeshore</option>
+    <option name="neighbourhood_cleansed_marina" value="1">Marina</option>
+    <option name="neighbourhood_cleansed_mission" value="1">Mission</option>
+    <option name="neighbourhood_cleansed_nob_hill" value="1">Nob Hill</option>
+    <option name="neighbourhood_cleansed_noe_valley" value="1">Noe Valley</option>
+    <option name="neighbourhood_cleansed_north_beach" value="1">North Beach</option>
+    <option name="neighbourhood_cleansed_ocean_view" value="1">Ocean View</option>
+    <option name="neighbourhood_cleansed_outer_mission" value="1">Outer Mission</option>
+    <option name="neighbourhood_cleansed_outer_richmond" value="1">Outer Richmond</option>
+    <option name="neighbourhood_cleansed_outer_sunset" value="1">Outer Sunset</option>
+    <option name="neighbourhood_cleansed_pacific_heights" value="1">Pacific Heights</option>
+    <option name="neighbourhood_cleansed_potrero_hill" value="1">Potrero Hill</option>
+    <option name="neighbourhood_cleansed_russian_hill" value="1">Russian Hill</option>
+    <option name="neighbourhood_cleansed_seacliff" value="1">Seacliff</option>
+    <option name="neighbourhood_cleansed_south_of_market" value="1">South of Market</option>
+    <option name="neighbourhood_cleansed_visitacion_valley" value="1">Visitacion Valley</option>
+    <option name="neighbourhood_cleansed_western_addition" value="1">Western Addition</option>
     </select>
 </p> 
 
 <p> Cancellation Policy :   
 <select name="cancellation_policy">
-<option name="cancellation_policy_flexible" value="cancellation_policy_flexible" selected>Flexible </option>
+<option value="0" selected>Select: </option>
+<option name="cancellation_policy_flexible" value="cancellation_policy_flexible">Flexible </option>
 <option name="cancellation_policy_moderate" value="cancellation_policy_moderate">Moderate </option>
 <option name="cancellation_policy_strict" value="cancellation_policy_strict">Strict </option>
 <option name="cancellation_policy_super_strict_30" value="cancellation_policy_super_strict_30">Strict 30 </option>
@@ -286,14 +294,13 @@
 </select></p>
     
 <p> Host Response Time :   
-    <select name="host_response_time">
-        <option name="host_response_time_a_few_days_or_more" value="host_response_time_a_few_days_or_more" selected>A Few Days or More </option>
-        <option name="host_response_time_within_a_day" value="host_response_time_within_a_day">Within a Day </option>
-        <option name="host_response_time_within_a_few_hours" value="host_response_time_within_a_few_hours">Within a Few Hours </option>
-        <option name="host_response_time_within_an_hour" value="host_response_time_within_an_hour">Within an Hour </option>
-    </select>
-</p>
-
+<select name="cancellation_policy">
+<option value="0" selected>Select: </option>
+<option name="host_response_time_a_few_days_or_more" value="host_response_time_a_few_days_or_more">A Few Days or More </option>
+<option name="host_response_time_within_a_day" value="host_response_time_within_a_day">Within a Day </option>
+<option name="host_response_time_within_a_few_hours" value="host_response_time_within_a_few_hours">Within a Few Hours </option>
+<option name="host_response_time_within_an_hour" value="host_response_time_within_an_hour">Within an Hour </option>
+</select></p>
 
 <p> <input type ="submit" value="submit" /> </p>
 
