update whole app

--- a/flask-app/templates/result.html
+++ b/flask-app/templates/result.html
@@ -4,7 +4,21 @@
 <body>
 
 <h3> User Rating Prediction: {{ prediction }} </h3>
-<p><h4>  </h4></p>
+
+<p>
+<div class='tableauPlaceholder' id='viz1533420660363' style='position: relative'><noscript><a href='#'><img alt='Listing Feature Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerRating_0&#47;Dashboard_Tool&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CustomerRating_0&#47;Dashboard_Tool' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerRating_0&#47;Dashboard_Tool&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1533420660363');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='827px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+
+<a href="https://www.airbnb.ca/rooms/6435807?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/dSUVGK/1bedroom_1.png" alt="1bedroom_1" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/14990478?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/bXWMOz/1bedroom_2.png" alt="1bedroom_2" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/394575?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/fuvgOz/1bedroom_3.png" alt="1bedroom_3" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/3030653?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/dzwXVe/1bedroom_4.png" alt="1bedroom_4" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/10517693?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/bwFRqe/1bedroom_5.jpg" alt="1bedroom_5" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/14501673?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/nr6kGK/1bedroom_7.png" alt="1bedroom_7" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/585326?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/kns33z/1bedroom_10.png" alt="1bedroom_10" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/14804950?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/jeyzbK/1bedroom_8.png" alt="1bedroom_8" border="0"></a>
+<a href="https://www.airbnb.ca/rooms/713877?location=San%20Francisco%2C%20CA%2C%20United%20States"><img src="https://image.ibb.co/dkozbK/1bedroom_9.png" alt="1bedroom_9" border="0"></a>
+
 
 </body>
 </html>
